# llm_rag_openai

./: .gitignore  README.md  pyproject.toml  rag_demo.ipynb  requirements.txt
data/: test.txt
src/: rag_pipeline.py
src/client/: openai_client.py
src/utils/: chunk_processor.py  document_reader.py  embaddings_creator_chroma.py  embading_processor.py
