[project]
name = "RAG_App"
version = "0.1.0"
description = "A Retrieval-Augmented Generation Application"
authors = [
    { name = "Your Name", email = "bharattest@gmail.com"}]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = [
    "python-dotenv",
    "openai",
]

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
